--- a/Clipnyx/Clipnyx/InfoPlist.xcstrings
+++ b/Clipnyx/Clipnyx/InfoPlist.xcstrings
@@ -3,18 +3,23 @@
   "strings" : {
     "CFBundleName" : {
       "comment" : "Bundle name",
-      "extractionState" : "extracted_with_value",
       "localizations" : {
         "en" : {
           "stringUnit" : {
-            "state" : "new",
+            "state" : "translated",
+            "value" : "Clipnyx"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
             "value" : "Clipnyx"
           }
         }
       }
     },
     "NSAccessibilityUsageDescription" : {
-      "extractionState" : "stale",
+      "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
