アイテム単体サイズ制限を廃止し件数+全体容量制限に変更
maxItemSizeMBを削除し、maxTotalSizeMB（デフォルト1GB）で全体容量を制御。
captureからサイズ制限パラメータを除去し500MBハードキャップのみ残す。
設定UIを「最大容量」に変更（256MB/512MB/1GB/2GB/5GB）。
ローカライズ追加（Max Storage、%lld GB）と旧Max Item Sizeを削除。

--- a/Clipnyx/Clipnyx/Localizable.xcstrings
+++ b/Clipnyx/Clipnyx/Localizable.xcstrings
@@ -83,6 +83,16 @@
         }
       }
     },
+    "%lld GB" : {
+      "localizations" : {
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld GB"
+          }
+        }
+      }
+    },
     "%lld items" : {
       "localizations" : {
         "ja" : {
@@ -395,12 +405,12 @@
         }
       }
     },
-    "Max Item Size" : {
+    "Max Storage" : {
       "localizations" : {
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "1アイテムの最大サイズ"
+            "value" : "最大容量"
           }
         }
       }
